--- a/style.css
+++ b/style.css
@@ -1,3 +1,216 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 .container {
   padding: 40px 0px;
+}
+
+.hero {
+  background-color: #1f2937;
+}
+
+.row {
+  display: flex;
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+  padding: 32px 32px;
+  align-items: center;
+  justify-content: center;
+}
+
+/*NAVBAR*/
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: -50px;
+  margin-bottom: 100px;
+}
+
+.navbar__header {
+  font-size: 24px;
+  color: #f9faf8;
+}
+
+.navbar__links {
+  display: flex;
+  gap: 20px;
+}
+
+.nav__links {
+  text-decoration: none;
+  color: #e5e7eb;
+}
+
+/*HERO*/
+.hero__wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1400px;
+  padding-bottom: 60px;
+}
+
+.hero__header {
+  font-size: 48px;
+  font-weight: bolder;
+  color: #f9faf8;
+  padding-bottom: 10px;
+}
+
+.hero__para {
+  font-size: 18px;
+  color: #f9faf8;
+}
+
+.hero__description--wrapper {
+  display: flex;
+  width: 100%;
+}
+
+.hero__button {
+  margin-top: 10px;
+  padding: 6px 3px;
+  border-radius: 5px;
+  width: 25%;
+  color: #f9faf8;
+  background-color: #3882f6;
+}
+
+.hero__img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #f9faf8;
+  margin-left: 50px;
+  width: 100%;
+  max-height: 250px;
+  background-color: #858585;
+}
+
+/*INFO*/
+
+.info__header {
+  font-size: 36px;
+  font-weight: bolder;
+  color: #1f2937;
+  margin-bottom: 30px;
+}
+
+.info__wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 1000px;
+  margin-bottom: 50px;
+}
+
+.info__illustration {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 20px;
+}
+
+.blue__box {
+  border: 3px solid #3882f6;
+  width: 100%;
+  height: 200px;
+  border-radius: 5px;
+}
+
+.info__illustration--para {
+  margin-top: 10px;
+  overflow-wrap: break-word;
+}
+
+/*Testimonail*/
+
+.testimonial {
+  background-color: #e5e7eb;
+}
+
+.testimonial__wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 1000px;
+}
+
+.testimonial__header {
+  display: flex;
+  justify-content: flex-start;
+  font-style: italic;
+  font-weight: lighter;
+  font-size: 36px;
+}
+
+.testimonial__author {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+  font-weight: bolder;
+}
+
+/*Call To Action*/
+
+.CTA__wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1000px;
+}
+
+.CTA__row {
+  max-width: 1400px;
+  background-color: #3882f6;
+  border-radius: 5px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.CTA__header {
+  color: #f9faf8;
+}
+
+.CTA__description {
+  color: #f9faf8;
+}
+
+.CTA__button {
+  height: 40px;
+  width: 20%;
+  margin-right: 20px;
+  border: 2px solid #f9faf8;
+  border-radius: 5px;
+  background-color: #3882f6;
+  color: #f9faf8;
+}
+
+/*Footer*/
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1f2937;
+  color: #e5e7eb;
+}
+
+.footer_header {
+  font-size: 18px;
+  font-weight: 200;
+  padding: 30px;
 }
